	  See OndMdServiceImpl, MetadataGroupPanel, Option, MdUtil, MdHelper.
	  - OmvMmi.shortNameUri is now associated with Omv.acronym 
	  - OndMdServiceImpl.prepareOntologyInfo(File file, OntologyInfo ontologyInfo): 
	  	if OmvMmi.shortNameUri is part of the list of attributes, then it also assigns OmvMmi.shortNameUri
	  - MetadataGroupPanel: various adjustments.
	    
	  

2009-03-17
	- Using Voc2RDF, I just created and submitted the following vocabularies (with the
	  current values in the authorities.csv and resourcetypes.csv, respectively):
	       http://mmisw.org/ont/mmi/20090317T183911/authority
	       http://mmisw.org/ont/mmi/20090317T173755/resourcetype
	  A next step is to use these ontologies (instead of the CSV files) to drive the 
	  corresponding drop-down menus.
	  
	  
	- Fixed the ``,,'' issue in voc2rdf: issue #87	
	
	-  Code clean-up:
		- Moved MdHelper from org.mmisw.ont.util/ to org.mmisw.ontmd.gwt.server/
		- New class org.mmisw.ontmd.gwt.server/MdUtil with utilities for MdHelper.
		- Removed org.mmisw.ont.{Omv,OmvMmi} from this project; now, the ont generated
		  library org.mmisw.ont.vocabulary.jar is used instead.
		  
		  
	- Issue #106: "Use ontologies to drive drop-down menus"
	  Started changes to implement this. See Config, MdHelper and MdUtil.
	  Note that Config defines the URI of the class of the vocabulary to be loaded. However,
	  TODO perhaps in a future version multiple classes could be supported in the
	  ontology, so this scheme would have to change.     (1.0.4.beta (20090317))
	  
	  
	- Partially fixed Issue #45: "include URIs for Topic in the ontmd Topic URI field"
	  1.0.5.beta (20090317)
	  See MetadataGroupPanel, Option, MdUtil, MdHelper.
	  
	- Using style OBF to reduce size of javascript (issue #108: "ontmd client: 1.0MB per load")
	
	
2009-03-13
	- Fixed http://code.google.com/p/mmisw/issues/detail?id=98:
	                "new version allows the shortName and authority to be changed"
	                