@@ -4,10 +4,13 @@
 # Created: 2008-10-28
 ############################################################################
 
+GWT_HOME=/Users/carueda/Software/gwt-mac-1.5.2
+
 appserver.home=/Applications/apache-tomcat-6.0.16
 appserver.lib=${appserver.home}/lib
 appserver.logs=${appserver.home}/logs
 
+# some logging parameters
 ontmd.app.log.deflevel=ERROR
 ontmd.app.log.ontmdlevel=DEBUG
 ontmd.app.logfilepath=${appserver.logs}/ontmd.log
@@ -15,4 +18,25 @@ ontmd.app.maxlogfilesize=10000KB
 ontmd.app.maxlogbackupindex=15
 
 
-GWT_HOME=/Users/carueda/Software/gwt-mac-1.5.2
+### service configuration parameters ###
+
+# URI of the resourceType OWL class:
+# The instances of this class are used to populate the corresponding selection GUI component
+ontmd.resourcetype.class=http://mmisw.org/ont/mmi/resourcetype/ResourceType
+		
+# URI of the Authority OWL class:
+# The instances of this class are used to populate the corresponding selection GUI component
+ontmd.authority.class=http://mmisw.org/ont/mmi/authority/Authority
+
+# where the pre-loaded files are stored:
+ontmd.pre.uploads.dir=/Users/Shared/mmiregistry/ontmd/preuploads/
+		
+# where voc2rdf-generated files are stored: 
+ontmd.voc2rdf.dir=/Users/Shared/mmiregistry/ontmd/voc2rdf/
+		
+# where the previewed files are stored:
+ontmd.preview.dir=/Users/Shared/mmiregistry/ontmd/previews/
+		
+# where the resource files are stored:
+ontmd.resource.dir=/Users/Shared/mmiregistry/ontmd/resources/
+		
