@@ -2,6 +2,8 @@ package org.mmisw.ontmd.gwt.client.voc2rdf.rpc;
 
 import java.util.Map;
 
+import org.mmisw.ontmd.gwt.client.rpc.AppInfo;
+
 import com.google.gwt.user.client.rpc.RemoteService;
 
 /**
@@ -12,6 +14,11 @@ import com.google.gwt.user.client.rpc.RemoteService;
  */
 public interface Voc2RdfService extends RemoteService {
 
+	/**
+	 * Gets basic application info.
+	 */
+	AppInfo getAppInfo();
+	
 	Voc2RdfBaseInfo getBaseInfo();
 	
 	ConversionResult convert(Map<String,String> values);
