@@ -2,6 +2,8 @@ package org.mmisw.ontmd.gwt.client.voc2rdf.rpc;
 
 import java.util.Map;
 
+import org.mmisw.ontmd.gwt.client.rpc.AppInfo;
+
 import com.google.gwt.user.client.rpc.AsyncCallback;
 
 /**
@@ -12,6 +14,8 @@ import com.google.gwt.user.client.rpc.AsyncCallback;
  */
 public interface Voc2RdfServiceAsync {
 
+	void getAppInfo(AsyncCallback<AppInfo> callback);
+	
 	void getBaseInfo(AsyncCallback<Voc2RdfBaseInfo> callback);
 	
 	void convert(Map<String,String> values, AsyncCallback<ConversionResult> callback);
