@@ -1,0 +1,8 @@
+############################################################################
+# Version properties for the org.mmisw.ontmd service
+# Carlos Rueda - MMI / MBARI
+# Created: 2009-03-18
+############################################################################
+
+# Version
+ontmd.app.version=1.0.8.beta
